[project]
name = "ltx-video-inpaint"
version = "0.1.0"
description = "LTX-Video-Inpaint"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "torch>=2.1.0",
    "diffusers>=0.28.2",
    "transformers>=4.44.2",
    "sentencepiece>=0.1.96",
    "huggingface-hub~=0.25.2",
    "einops",
    "accelerate",
    "matplotlib",
    "imageio[ffmpeg]",
    "av",
    "modal",
    "fastapi[standard]",
]
